added new script replace_string.sh

--- a/TODO.txt
+++ b/TODO.txt
@@ -11,3 +11,11 @@ PING_MACHINEGUN:
 255.255.255.0)
 -set to ping ipv6 addresses
 ==============================================================================================================
+
+
+==============================================================================================================
+REPLACE_STRING:
+
+-Do checking/user_question for target starting with . e.g. '.localconf' while do not do checking if it's a 
+path e.g. './local/config'
+==============================================================================================================
